# Rust_C_Benchmarks

./: README.md
Benchmarks/: README.md
Benchmarks/Algorithm_Benchmarks/: README.md
Benchmarks/Algorithm_Benchmarks/C/: binary_search.c  bubble_sort.c  cocktail_sort.c  coin_change.c  comb_sort.c  gnome_sort.c  heap_sort.c  hummingDist.c  knapsack.c  knuth_morris_pratt.c  longest_common_subsequence.c  max_subarry.c  merge_sort.c  odd_even_sort.c  quick_sort.c  reverse_string.c  rod_cutting.c  selection_sort.c  shell_sort.c  stooge_sort.c
Benchmarks/Algorithm_Benchmarks/Rust/: binary_search.rs  bubble_sort.rs  comb_sort.rs  (+12 more)
Benchmarks/Micro_Benchmarks/: README.md  input
Benchmarks/Performance_Benchmarks/: README.md
Benchmarks/Performance_Benchmarks/Rust/k-nucleotide/: Cargo.toml
Micro_Benchmarks/: README.md  input_long  input_string  input_usize
Micro_Benchmarks/C/: cocktail_sort.c  coin_change.c  manacher.c
Micro_Benchmarks/Rust/: bubble_sort.rs  coin_change.rs  comb_sort.rs  fibonacci_search.rs  manacher.rs  merge_sort.rs  reverse_string.rs  rod_cutting.rs  selection_sort.rs  stooge_sort.rs
New_Findings/: README.md
New_Findings/Finding_1/: README.md  comb_sort.rs
New_Findings/Finding_2/: README.md  hummingDist.rs  knuth_morris_pratt.rs  longest_common_subsequence.rs  manacher.rs  reverse.rs
Performance_Benchmarks/: README.md
Performance_Benchmarks/C/: binary-trees.c  fannkuch-reduc.c  fasta.c  k-nucleotide.c  mandelbrot.c
Performance_Benchmarks/Rust/: n-body.rs
Random_Input_Generator/: README.md  random_gen_char.py  random_gen_num.py
(+65 files in other folders)
